--- a/main.css
+++ b/main.css
@@ -5,48 +5,23 @@
 }
 
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    background-image: linear-gradient(
+        0deg,
+        rgba(247, 247, 247, 1) 23.8%,
+        rgba(252, 221, 221, 1) 92%
+      );
+      height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: 'Lato', sans-serif;
+      margin: 0;
 }
 
-.navbar {
-    background-color: #545454;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    color: white;
-}
 
-.logo {
-    width: 50px;
-    height: 50px;
-}
-
-.navbar-brand a {
-    color: white;
-    text-decoration: none;
-    margin-right: 20px;
-}
-
-#searchInput {
-    padding: 5px;
-    width: 200px;
-}
-
-.navbar-buttons button {
-    background-color: transparent;
-    color: white;
-    border: 1px solid white;
-    padding: 5px 10px;
-    margin-left: 10px;
-    cursor: pointer;
-}
-
-.navbar-buttons button:hover {
-    background-color: white;
-    color: #545454;
+.container{
+    padding-left: 90px;
 }
 
 .card {
@@ -94,12 +69,12 @@ body {
 }
 
 .footer-player {
-    background-color: #545454;
-    color: white;
+    color: rgb(0, 0, 0);
     display: flex;
+    box-shadow: 0px -2px 10px rgba(0, 0, 0, 0.1);
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -133,14 +108,43 @@ body {
 
 .footer-player .player-controls button {
     background-color: transparent;
-    color: white;
+    color: rgb(0, 0, 0);
     border: 1px solid white;
     padding: 5px 10px;
     cursor: pointer;
 }
 
 .footer-player .player-controls button:hover {
-    background-color: white;
-    color: #545454;
+    background-color: #dad8d8;
+    color: #000000;
+}
+.custom-navbar {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.custom-input {
+    border: none;
+    background-color: transparent;
+    padding: 8px;
+    outline: none;
+    font-size: 16px;
+    width: 100%; 
+    max-width: 400px;
+    border: 1px solid #ffffff; 
+    border-radius: 20px; 
+    transition: border-color 0.3s ease; 
+}
+
+.custom-input::placeholder {
+    color: #000000;
+}
+
+.custom-input:focus {
+    border-color: #000000; 
 }
 
